--- a/restaurant_service/.env
+++ b/restaurant_service/.env
@@ -11,3 +11,4 @@ REDIS_HOST=xyx.ap-southeast-1-1.ec2.cloud.redislabs.com:16952
 REDIS_PASSWORD=password
 REDIS_USERNAME=admin
 ORDER_SERVICE_URL=http://localhost:8082
+CUSTOMER_SERVICE_URL=http://localhost:8081
