--- a/restaurant_service/.env
+++ b/restaurant_service/.env
@@ -7,8 +7,8 @@ MONGO_DATABASE=
 MONGO_USERNAME=
 MONGO_PASSWORD=
 RABBIT_MQ_URL=amqps://username:password@lionfish.rmq.cloudamqp.com/yourqueue
-REDIS_HOST=xyx.ap-southeast-1-1.ec2.cloud.redislabs.com:16952
-REDIS_PASSWORD=password
+REDIS_HOST=redis-18226.c74.us-east-1-4.ec2.cloud.redislabs.com:18226
+REDIS_PASSWORD=@Dmin@202!
 REDIS_USERNAME=admin
 ORDER_SERVICE_URL=http://localhost:8082
 CUSTOMER_SERVICE_URL=http://localhost:8081
