--- a/order_service/package.json
+++ b/order_service/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "mocha "
+    "test": "mocha --timeout 10000"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,8 @@
     "amqplib": "^0.8.0",
     "axios": "^0.26.1",
     "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "chai-sorted": "^0.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
