--- a/restaurant_service/.env
+++ b/restaurant_service/.env
@@ -12,3 +12,4 @@ REDIS_PASSWORD=@Dmin@202!
 REDIS_USERNAME=admin
 ORDER_SERVICE_URL=http://localhost:8082
 CUSTOMER_SERVICE_URL=http://localhost:8081
+AUTH_VALIDATION=false
