--- a/restaurant_service/.env
+++ b/restaurant_service/.env
@@ -2,11 +2,12 @@ ENV=development
 IP_ADDRESS=0.0.0.0
 PORT=8080
 POSTGRE_SQL_SERVER = postgres://suvwtsfg:qWu6laHizya5Z18npPLchUfBRwDosH6g@rosie.db.elephantsql.com/suvwtsfg
+MONGO_URL=mongodb+srv://restaurant_service:nJ0FPyHJQK2AZPbS@cluster0.r4xqn.mongodb.net/restaurantservice?retryWrites=true&w=majority
 MONGO_SERVER=
 MONGO_DATABASE=
 MONGO_USERNAME=
 MONGO_PASSWORD=
-RABBIT_MQ_URL=amqps://username:password@lionfish.rmq.cloudamqp.com/yourqueue
+RABBIT_MQ_URL=amqps://qoeggjgk:DLYnO3ChFqwMo4dJa2aWA7htNN6JLjG2@shrimp.rmq.cloudamqp.com/qoeggjgk
 REDIS_HOST=redis-18226.c74.us-east-1-4.ec2.cloud.redislabs.com:18226
 REDIS_PASSWORD=@Dmin@202!
 REDIS_USERNAME=admin
